<resources>
    <string name="app_name">Expense Application</string>
    <string name="action_settings">Settings</string>
    <string name="add_expense_btn">Add Expense</string>
    <string name="edit_expense_btn">Edit Expense</string>
    <string name="delete_expense_btn">Delete Expense</string>
    <string name="show_expense_btn">Show Expenses</string>
    <string name="finish_btn">Finish</string>
    <string name="add_Expense_label">Add An Expense</string>
    <string name="expense_name_label">Expense Name</string>
    <string name="category_label">Category</string>
    <string name="amount_label">Amount</string>
    <string name="date_label">Date</string>
    <string name="Receipt_label">Receipt</string>
    <string name="select_expense">Select Expense</string>
    <string name="category_hint">Select a category</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="delete_btn">Delete</string>
    <string name="show_expense_label">Expense Details</string>
    <string name="name_label">Name</string>
    <string name="error_name">Enter Expense Name</string>
    <string name="error_category">Choose Category</string>
    <string name="error_amount">Enter Amount</string>
    <string name="error_date">Enter Date</string>
    <string name="wrong_date">Future date is not possible</string>
    <string name="error_image">Select Receipt</string>

    <string-array name="categories">
        <item>Select Category</item>
        <item>Groceries</item>
        <item>Invoice</item>
        <item>Transportation</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Trips</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
</resources>
