<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditExpenseActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="selectExpenseToEdit"
        android:text="@string/select_expense"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/expenseNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_name_label"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/expenseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="text"
        android:maxLength="50"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_label"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_label"
        android:layout_marginTop="4dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:enabled="false"/>

        <ImageView
            android:id="@+id/calender"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:onClick="onClick"
            android:src="@drawable/calendar_icon_orange" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Receipt_label" />

    <ImageView
        android:id="@+id/receipt"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="left"
        android:onClick="browseImage"
        android:src="@drawable/browse_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveEditedExpense"
            android:text="@string/save_btn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CancelEditedExpense"
            android:text="@string/cancel_btn" />
    </LinearLayout>


</LinearLayout>
