<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sriram.expenseapplication.DeleteExpenseActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_expense"
        android:gravity="center"
        android:textStyle="bold"
        android:onClick="selectExpenseToDelete"/>

    <TextView
        android:id="@+id/expenseNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_name_label"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/expenseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:maxLength="50"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_label"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
        android:clickable="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_label"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:enabled="false"/>

        <ImageView
            android:id="@+id/calender"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:src="@drawable/calendar_icon_orange" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Receipt_label" />

    <ImageView
        android:id="@+id/receipt"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="left"
        android:src="@drawable/browse_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="DeleteExpense"
            android:text="@string/delete_btn"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CancelDeleteExpense"
            android:text="@string/cancel_btn" />
    </LinearLayout>


</LinearLayout>
